# openloom-connector

./: .gitignore  README.md  pyproject.toml
examples/: local_fs.py  local_fs.yaml
src/openloom_connector/: __init__.py  base.py  cli.py  config.py  runner.py
tests/: test_base.py  test_config.py  test_runner.py
