[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openloom-connector"
version = "0.2.0"
description = "File-based adapter for OpenLoom — bridge any storage backend via upload/download."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["openloom", "connector", "webhook", "file-bridge", "integration"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Build Tools",
]
dependencies = [
  "httpx>=0.27",
  "pyyaml>=6.0",
  "python-docx>=1.1",
  "requests>=2.31",
] 

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "respx>=0.21",
  "ruff>=0.8",
]

[project.urls] 
Homepage = "https://github.com/atbeta/openloom-connector"
Repository = "https://github.com/atbeta/openloom-connector"

[project.scripts]
openloom-connector = "openloom_connector.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "respx>=0.21",
  "ruff>=0.8",
] 

[tool.hatch.build.targets.wheel]
packages = ["src/openloom_connector"]

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
